# marlowe-ici

./: .gitignore  ReadMe.md  build-doc.sh  cabal.project  default.nix  example-kube.yaml  flake.nix  marlowe-ici.cabal  shell.nix
app/: Main.hs
docs/: CNAME  index.html  view.css
nix/: containers.nix  outputs.nix  project.nix  shell.nix
nix/pkgs/haskell/materialized-darwin/: default.nix
nix/pkgs/haskell/materialized-darwin/.plan.nix/: marlowe-cli.nix  marlowe-contracts.nix  marlowe-ici.nix  plutus-pab.nix
nix/pkgs/haskell/materialized-linux/: default.nix
nix/pkgs/haskell/materialized-linux/.plan.nix/: marlowe-cli.nix  marlowe-dashboard-server.nix
nix/pkgs/haskell/materialized-windows/: default.nix
nix/pkgs/haskell/materialized-windows/.plan.nix/: marlowe-ici.nix  marlowe-playground-server.nix  marlowe.nix  plutus-contract.nix
src/Language/Marlowe/: ICI.hs
src/Language/Marlowe/ICI/: BulkSync.hs  Cbor.hs  Indexer.hs  Ipfs.hs  Ipld.hs  PTree.hs
src/Language/Marlowe/ICI/PTree/: Ipld.hs
web/: .gitignore  Makefile  eslint.json  model.html  notes.txt  package-lock.json  package.json  run.sh  view.css  webpack.config.js
web/relay/go-libp2p-relay-daemon/: config  identity
web/src/: controller.js
web/webrtc-star/: nginx.conf  package.json  webrtc-star.sh
webrtc-star/: nginx.conf  package-lock.json  webrtc-star.sh
