cabal-version:      3.0
name:               marlowe-ici
version:            0.2.1.0
synopsis:           An IPFS chain index for Marlowe.
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>
category:           Network
build-type:         Simple
extra-source-files: ReadMe.md

library
  exposed-modules:
    Language.Marlowe.ICI
    Language.Marlowe.ICI.BulkSync
    Language.Marlowe.ICI.Cbor
    Language.Marlowe.ICI.Indexer
    Language.Marlowe.ICI.Ipfs
    Language.Marlowe.ICI.Ipld
    Language.Marlowe.ICI.PTree
    Language.Marlowe.ICI.PTree.Ipld

  hs-source-dirs:   src
  build-depends:
    , aeson
    , base >=4.9 && <5
    , base16-bytestring
    , binary
    , bytestring
    , cborg
    , cborg-json
    , containers
    , cryptonite
    , data-default
    , ipld-cid
    , leb128-binary ==0.1.2
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-client
    , marlowe-runtime:{marlowe-runtime, history-api, sync-api} ==0.0.6
    , mtl
    , shake
    , split
    , stm
    , text

  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

executable marlowe-ici
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  Paths_marlowe_ici
  build-depends:
    , base >=4.9 && <5
    , marlowe-ici
    , optparse-applicative

  ghc-options:    -Wall -Wunused-packages
